--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -1093,6 +1093,11 @@ Our labeling tool was largely refactored to incorporate the feedback we received
     \item Removed white space.
     \item Removed help button when the project was complete.
 \end{itemize}
+\subsection{Changes to Back-end}
+\begin{itemize}
+    \item The image partitioning logic has been refined to ensure consistent sizing, addressing previous inconsistencies that may have impacted usability and accuracy. This improvement enhances the overall structure and presentation of images, leading to a more uniform labeling experience.
+    \item Additionally, a dedicated context area has been introduced within the images, providing labelers with crucial surrounding details to improve object identification. This enhancement not only increases label accuracy but also streamlines the labeling process, making it easier and more intuitive for labelers to complete their tasks efficiently.
+\end{itemize}
 
 \subsection{Potential Changes to Backend}
 \begin{itemize}
