--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -3,7 +3,6 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{booktabs}
-\usepackage{longtable}
 \usepackage{tabularx}
 \usepackage{hyperref}
 \hypersetup{
@@ -33,7 +32,8 @@
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-10/03/2025 & Rev 0 & \\
+Date 1 & 1.0 & Notes\\
+Date 2 & 1.1 & Notes\\
 \bottomrule
 \end{tabularx}
 
@@ -41,7 +41,16 @@
 
 \section{Symbols, Abbreviations and Acronyms}
 
-Please see section 4.1 of the \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/SRS/SRS.pdf}{SRS.}
+\renewcommand{\arraystretch}{1.2}
+\begin{tabular}{l l} 
+  \toprule		
+  \textbf{symbol} & \textbf{description}\\
+  \midrule 
+  T & Test\\
+  \bottomrule
+\end{tabular}\\
+
+\wss{symbols, abbreviations or acronyms -- you can reference the SRS tables if needed}
 
 \newpage
 
@@ -55,15 +64,9 @@ Please see section 4.1 of the \href{https://github.com/OKKM-insights/OKKM.insigh
 
 \pagenumbering{arabic}
 
-This document will provide a summary and analysis of verification and validation activities. It will evaluate the Functional Requirement, evaluate the Non-Functional Requirements,
-describe the Unit Tests, list the changes due to testing, outline our automated testing infrastructure, and finally provide traceability to requirements.
+This document ...
 
 \section{Functional Requirements Evaluation}
-\subsection{Verification}
-Throughout the verification process, the team identified several requirements which were no longer valid. These were largely related to payment processing, which we deemed to be out of scope for this course. We also assigned priority to the remaining 
-requirements, which allowed the team to focus their efforts on the highest impact work. Details regarding requirement prioritization can be found in the \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/SRS/SRS.pdf}{SRS.} Throughout the process, we have adhered to the strategy described in our \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/VnVPlan/VnVPlan.pdf}{VNV Plan},
-consulting with our peers and primary reviewers. 
-
 \subsection{Summary of Tests}
 \begin{tabular}{|c|c|l|}
     \hline
@@ -480,44 +483,6 @@ project creation portal. The team has been able to trace this error back to our 
 	Please see usability report, found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/Extras/UsabilityReport/UsabilityReport.pdf}{here}
 
 \subsection{Performance}
-\begin{longtable}{|c|c|l|}
-    \hline
-    \textbf{Test ID} & \textbf{Status} & \textbf{Notes} \\
-    \hline
-    T-PR0 & Pass & \textit{New User Account Processing Time Validation} \\
-    T-PR1 & Pass & \textit{Service Request Completion Time Validation} \\
-    T-PR2 & Pass & \textit{Next Image Serving Time Validation} \\
-    T-PR3 & Removed & \textit{Payout Processing Time Validation (Out of Scope)} \\
-    \hline
-\end{longtable}
-
-\subsubsection{T-PR0: New User Account Processing Time Validation}
-\textbf{Initial State}: The system is ready to accept new user account creation requests.\\
-\textbf{Input/Condition}: A set of new user account creation requests are submitted, and their processing times are tracked.\\
-\textbf{Expected Result}: At least MIN ACCOUNT CREATION SUCCESS\% of requests are processed within 15 minutes, and all within 48 hours.\\
-\textbf{Result}: \textbf{Pass}
-
-\subsubsection{T-PR1: Service Request Completion Time Validation}
-\textbf{Initial State}: The system is ready to accept service requests with predefined negotiated time limits.\\
-\textbf{Input/Condition}: Service requests are submitted under typical operating conditions.\\
-\textbf{Expected Result}: At least MIN REPORT RETURN\% of requests are completed within the negotiated time limit, and all within an additional 48-hour buffer.\\
-\textbf{Result}: \textbf{Pass}
-
-\subsubsection{T-PR2: Next Image Serving Time Validation}
-\textbf{Initial State}: Labelers are logged in with images available for labeling.\\
-\textbf{Input/Condition}: Labelers request the next image while images are available in the queue.\\
-\textbf{Expected Result}: Image serving time does not exceed MAX IMAGE DISPLAY TIME seconds.\\
-\textbf{Result}: \textbf{Pass}
-
-\subsubsection{T-PR3: Payout Processing Time Validation}
-\textbf{Initial State}: Labelers have earned payouts and submitted payout requests.\\
-\textbf{Input/Condition}: Payout requests are made, and processing times are tracked.\\
-\textbf{Expected Result}: All payout requests are processed within 7 business days.\\
-\textbf{Result}: \textbf{Test not completed}\\
-\textbf{Comments}: Requirement is out of scope as payout processing is handled by third-party financial institutions.
-
-\subsubsection{Performance Analysis}
-The performance tests show that core system functionalities, such as account processing time, service request completion, and image serving time, have met their expected benchmarks. However, \textbf{payout processing time validation was removed} as it is out of scope due to reliance on third-party financial institutions.
 \subsection{Operational and Environmental}
 \subsubsection{Summary of Tests}
 \begin{center}
@@ -861,90 +826,8 @@ all weak passwords are blocked, but some strong passwords are as well. The devel
 
 
 \subsection{Cultural}
-\begin{longtable}{|c|c|l|}
-    \hline
-    \textbf{Test ID} & \textbf{Status} & \textbf{Notes} \\
-    \hline
-    T-CU0 & Not Achieved & \textit{Support of Different Languages} \\
-    \hline
-\end{longtable}
-
-\subsubsection{T-CU0: Support of Different Languages}
-\textbf{Initial State}: Application is deployed.\\
-\textbf{Input/Condition}: Tester selects a language from a list of available languages.\\
-\textbf{Expected Result}: All text on the website is translated and displayed in the selected language.\\
-\textbf{Result}: \textbf{Fail}\\
-\textbf{Comments}: Not yet implemented.
-
-\subsubsection{Cultural Analysis}
-The \textbf{support for multiple languages was not achieved}, as translation features have not yet been implemented. This remains an area for improvement to enhance accessibility for a global audience.
 \subsection{Compliance}
-\begin{longtable}{|c|c|l|}
-    \hline
-    \textbf{Test ID} & \textbf{Status} & \textbf{Notes} \\
-    \hline
-    T-CO0 & Removed & \textit{Compliant Payment Process (Out of Scope)} \\
-    T-CO1 & Not Achieved & \textit{System Availability} \\
-    T-CO2 & Removed & \textit{Taxes (Out of Scope)} \\
-    T-CO3 & Planned & \textit{Project Availability} \\
-    \hline
-\end{longtable}
-
-\subsubsection{T-CO0: Compliant Payment Process}
-\textbf{Initial State}: Application is deployed.\\
-\textbf{Input/Condition}: A Qualified Security Assessor (QSA) assesses the application.\\
-\textbf{Expected Result}: The application meets the PCI-DSS standard.\\
-\textbf{Result}: \textbf{Test not completed}\\
-\textbf{Comments}: Requirement is out of scope as payment processing is handled by third-party services.
-
-\subsubsection{T-CO1: System Availability}
-\textbf{Initial State}: Application is deployed.\\
-\textbf{Input/Condition}: Tester changes the country of access using a VPN.\\
-\textbf{Expected Result}: The application is blocked in countries facing economic sanctions by the Government of Canada.\\
-\textbf{Result}: \textbf{Fail}\\
-\textbf{Comments}: Not yet implemented.
-
-\subsubsection{T-CO2: Taxes}
-\textbf{Initial State}: Application is deployed.\\
-\textbf{Input/Condition}: Tester redeems a cash balance exceeding a threshold.\\
-\textbf{Expected Result}: A tax form is issued.\\
-\textbf{Result}: \textbf{Test not completed}\\
-\textbf{Comments}: Requirement is out of scope since tax handling was removed along with payment processing.
-
-\subsubsection{T-CO3: Project Availability}
-\textbf{Initial State}: Application is deployed.\\
-\textbf{Input/Condition}: Tester changes the country of access using a VPN.\\
-\textbf{Expected Result}: The specified project is not shown in restricted countries.\\
-\textbf{Result}: \textbf{Planned (To Be Implemented)}
-
-\subsubsection{Compliance Analysis}
-The compliance tests highlight \textbf{two removed requirements} (compliant payment process and tax handling) as they fall outside the system’s control. Additionally, \textbf{system availability failed} since country-based restrictions are not yet implemented. The \textbf{project availability test is planned} but not yet completed.
 \subsection{User Documentation and Training}
-\begin{longtable}{|c|c|l|}
-    \hline
-    \textbf{Test ID} & \textbf{Status} & \textbf{Notes} \\
-    \hline
-    T-UDT0 & Fail & \textit{Helpfulness of User Aids} \\
-    T-UDT1 & Fail & \textit{Usefulness of Sandbox} \\
-    \hline
-\end{longtable}
-
-\subsubsection{T-UDT0: Helpfulness of User Aids}
-\textbf{Initial State}: Application is deployed with help features, tutorials, and documentation.\\
-\textbf{Input/Condition}: Users attempt a labeling task using only built-in help resources.\\
-\textbf{Expected Result}: At least MIN USER HELP SATISFACTION\% of users rate the help features as 4 or higher.\\
-\textbf{Result}: \textbf{Fail}\\
-\textbf{Comments}: Based on the survey results, user satisfaction with the help resources did not meet the expected threshold. We need to refine and expand the available tutorials and documentation to improve usability.
-
-\subsubsection{T-UDT1: Usefulness of Sandbox}
-\textbf{Initial State}: Application is deployed with tutorials and a practice environment.\\
-\textbf{Input/Condition}: A new user accesses the platform.\\
-\textbf{Expected Result}: At least MIN PRACTICE USAGE\% of new users utilize the practice environment, with an average accuracy improvement of IMPROVE IN ACC\% over their first three attempts.\\
-\textbf{Result}: \textbf{Fail}\\
-\textbf{Comments}: The sandbox did not meet the required engagement or accuracy improvement metrics. Future efforts should focus on making the sandbox more intuitive, interactive, and better integrated with the user onboarding process.
-
-\subsubsection{User Documentation and Training Analysis}
-The training materials did not meet the expected success rate. Both the help resources and sandbox environment require improvements to enhance usability and engagement. We will explore adding more interactive tutorials, clearer documentation, and improved onboarding flows to help users understand and use the system more effectively.
 
 
 	
@@ -1104,76 +987,6 @@ Our labeling tool was largely refactored to incorporate the feedback we received
     \item Removed white space.
     \item Removed help button when the project was complete.
 \end{itemize}
-\subsection{Changes to Back-end}
-\begin{itemize}
-    \item The image partitioning logic has been refined to ensure consistent sizing, addressing previous inconsistencies that may have impacted usability and accuracy. This improvement enhances the overall structure and presentation of images, leading to a more uniform labeling experience.
-    \item Additionally, a dedicated context area has been introduced within the images, providing labelers with crucial surrounding details to improve object identification. This enhancement not only increases label accuracy but also streamlines the labeling process, making it easier and more intuitive for labelers to complete their tasks efficiently.
-\end{itemize}
-
-\subsection{Potential Changes to Backend}
-\begin{itemize}
-    \item Improve database efficiency by optimizing queries in \texttt{ImageClassMeasureDatabaseConnector}, \texttt{ImageObjectDatabaseConnector}, \texttt{LabelDatabaseConnector}, and \texttt{LabellerDatabaseConnector}, reducing redundant reads/writes.
-    \item Enhance API validation for key endpoints like \texttt{/api/register}, \texttt{/api/login}, and \texttt{/api/create\_project} to ensure required fields are properly validated before processing.
-    \item Handle duplicate entries gracefully in the user registration and labeling processes to prevent integrity constraint violations that currently lead to \texttt{500 INTERNAL SERVER ERROR}.
-    \item Implement better error handling and logging in database connectors to catch SQL errors and provide more useful debugging information.
-    \item Optimize batch insert operations for labeling data, reducing the number of individual database writes by leveraging \texttt{executemany()}.
-    \item Fix multipart form data processing in the \texttt{/api/create\_project} endpoint to correctly parse incoming requests.
-    \item Strengthen authentication security by moving away from simple Base64 encoding of passwords and ensuring proper hashing and verification.
-    \item Improve concurrency handling in database connections to prevent race conditions and transaction issues.
-    \item Refactor update operations for \texttt{/api/update-user/1} to avoid unnecessary database writes when no actual changes are made.
-    \item Streamline API structure by removing redundant endpoints and cleaning up unused code.
-\end{itemize}
-
-\subsection{Changes Due to Testing}
-Based on feedback from our supervisor, we have identified key areas for improvement and are implementing the following enhancements to the model:
-
-\subsubsection{Dynamic Splitting Implementation}
-Initially, the dataset was split using a fixed ratio for training and validation. However, this approach lacked adaptability to variations in dataset size and class distribution. To address this, we are implementing dynamic splitting, which will allow the dataset to be partitioned dynamically based on data characteristics. This enhancement ensures better generalization and minimizes overfitting to a specific split.
-
-\subsubsection{Integration of Segment Anything Model (SAM)}
-As a future enhancement, we are integrating Meta’s Segment Anything Model (SAM) into our pipeline. SAM's advanced segmentation capabilities will improve the accuracy of plane detection, allowing for more precise and automated object localization. The integration process will involve adapting SAM to our dataset and optimizing its performance for our specific use case.
-
-\subsection{Test Case Failures \\& Debugging}
-During our testing process, we encountered several test failures, mainly in our API and database-related test cases. The primary reasons for these failures are as follows:
-
-\subsubsection{Connection Issues with Database}
-\begin{itemize}
-    \item The \texttt{MYSQLImageObjectDatabaseConnector}, \texttt{MYSQLImageClassMeasureDatabaseConnector}, \texttt{MYSQLLabelDatabaseConnector}, and \texttt{MYSQLLabellerDatabaseConnector} failed to establish a database connection.
-    \item The error \texttt{quote\_from\_bytes() expected bytes} suggests that some environment variables (like database credentials) were not loaded properly or were set to \texttt{None}, causing an issue with \texttt{urllib.parse.quote\_plus()}.
-    \item \textbf{Potential Cause:} The \texttt{.env} file might not have been properly loaded, or the credentials might be missing/incorrect.
-\end{itemize}
-
-\subsubsection{API Tests Failing Due to Unexpected Responses}
-\begin{itemize}
-    \item Some API endpoints, like \texttt{/api/register} and \texttt{/api/create\_project}, returned unexpected response codes (\texttt{500} and \texttt{400} instead of \texttt{200}).
-    \item \textbf{Example Errors:}
-    \begin{itemize}
-        \item \textbf{Duplicate Entry Issue:} The \texttt{/api/register} test failed with a \texttt{500 INTERNAL SERVER ERROR} due to a duplicate email entry when inserting into the database.
-        \item \textbf{Invalid Form Data Parsing:} The \texttt{/api/create\_project} test returned \texttt{400 BAD REQUEST}, possibly due to incorrect handling of multipart form data.
-        \item \textbf{User Validation Missing:} The \texttt{/api/register} test expected a \texttt{400 BAD REQUEST} for missing required fields but received \texttt{200 OK} instead, suggesting that backend validation is not enforcing required fields strictly.
-    \end{itemize}
-\end{itemize}
-
-\subsubsection{Mocking \\& Unit Test Issues}
-\begin{itemize}
-    \item The unit tests that rely on database queries may not have correctly mocked the DB connection.
-    \item In some cases, mocked methods did not return expected results, causing tests to fail when fetching data.
-    \item \textbf{Solution:} We need to properly patch database connections and cursor executions in our unit tests.
-\end{itemize}
-
-\subsubsection{Multipart Form Data Handling Issue in \texttt{/api/create\_project}}
-\begin{itemize}
-    \item The API expects \texttt{multipart/form-data}, but the test case might be sending \texttt{application/json} instead, leading to unexpected behavior.
-\end{itemize}
-
-\subsection{Next Steps to Fix These Issues}
-\begin{itemize}
-    \item Ensure environment variables are correctly loaded to prevent \texttt{NoneType} errors in database connections.
-    \item Improve error handling in API routes to return more meaningful error messages instead of \texttt{500 INTERNAL SERVER ERROR}.
-    \item Refactor API input validation to properly enforce required fields and prevent duplicate entries.
-    \item Fix the multipart form handling in \texttt{/api/create\_project} by ensuring the test case correctly mimics actual user input.
-    \item Enhance unit test mocking to properly simulate database interactions.
-\end{itemize}
 
 \section{Automated Testing}
 Automated testing and linting have been implemented in the frontend and backend repositories, as described in section 7.2 of the \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/DevelopmentPlan/DevelopmentPlan.pdf}{Development Plan}.
@@ -1208,6 +1021,9 @@ graduate attribute of Reflection.
 
 \begin{enumerate}
   \item What went well while writing this deliverable? 
+  
+  The team effectively managed the workload despite the absence of one team member. The final VnV report deliverable was relatively straightforward to assemble due to the significant amount of preparatory work completed earlier in the semester. Finally, the meeting with Lucas provided valuable guidance, enabling us to break down tasks efficiently and get a head start on the final report. 
+
   \item What pain points did you experience during this deliverable, and how
     did you resolve them?
   \item Which parts of this document stemmed from speaking to your client(s) or
