--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -1026,6 +1026,9 @@ graduate attribute of Reflection.
 
   \item What pain points did you experience during this deliverable, and how
     did you resolve them?
+
+    One of the main challenges was the sheer volume of required tests for both the frontend and backend systems. To address this, the team prioritized testing core functions to ensure the most critical aspects of the system were validated. Writing comprehensive test cases that covered the entire codebase was also difficult, especially given the size and interconnected nature of the system. Additionally, learning Jest as a testing framework for the first time was difficult due to a significant learning curve. To overcome this, the team relied on online resources, tutorials, and peer support.
+
   \item Which parts of this document stemmed from speaking to your client(s) or
   a proxy (e.g. your peers)? Which ones were not, and why?
   \item In what ways was the Verification and Validation (VnV) Plan different
