--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -1027,12 +1027,12 @@ graduate attribute of Reflection.
   \item What pain points did you experience during this deliverable, and how
     did you resolve them?
 
-    One of the main challenges was the sheer volume of required tests for both the frontend and backend systems. To address this, the team prioritized testing core functions to ensure the most critical aspects of the system were validated. Writing comprehensive test cases that covered the entire codebase was also difficult, especially given the size and interconnected nature of the system. Additionally, learning Jest as a testing framework for the first time was difficult due to a significant learning curve. To overcome this, the team relied on online resources, tutorials, and peer support.
+    One of the main challenges was the volume of required tests for both the frontend and backend systems. To address this, the team prioritized testing core functions to ensure the most critical aspects of the system were validated. Writing comprehensive test cases that covered the entire codebase was also difficult, especially given the size and interconnected nature of the system. Additionally, learning Jest as a testing framework for the first time was difficult due to a significant learning curve. To overcome this, we relied on online resources, tutorials, and peer support.
 
   \item Which parts of this document stemmed from speaking to your client(s) or
   a proxy (e.g. your peers)? Which ones were not, and why?
 
-   Most of the frontend improvements were directly informed by survey feedback from peers, which was incorporated to enhance usability. However, some parts of the document, such as the initial test case design, were developed independently by the team prior to the survey being sent out. Some of the survey feedback, such as the logic for image partitioning, directly affected the current backend implementation.
+   Most of the frontend improvements were directly informed by survey feedback from peers, which was incorporated to enhance usability. However, some parts of the document, such as the initial test case design, were developed independently by us prior to the survey being sent out. Some of the survey feedback, such as the logic for image partitioning, directly affected the current backend implementation.
 
   \item In what ways was the Verification and Validation (VnV) Plan different
   from the activities that were actually conducted for VnV?  If there were
@@ -1043,7 +1043,7 @@ graduate attribute of Reflection.
   evidence that demonstrates the required quality?  (It is expected that most
   teams will have had to deviate from their original VnV Plan.)
 
-  The actual VnV activities deviated from the original plan in several ways. During the planning phase, the team had considered a wide range of requirements, many of which were later removed due to scope constraints and difficulty levels. The team initially aimed for an ambitious testing scope, including tests for unimplemented or less critical requirements, which proved unnecessary. Additionally, some checklist questions were overly complex and had to be simplified to make them more actionable. The reason for the changes stems from the team gaining a better understanding of the project’s priorities and limitations as we progressed. In future projects, we could anticipate such changes by setting more realistic goals during the planning phase.
+  The actual VnV activities deviated from the original plan in several ways. During the planning phase, we had considered a wide range of requirements, many of which were later removed due to scope constraints and difficulty levels. The team initially aimed for an ambitious testing scope, including tests for unimplemented or less critical requirements, which proved unnecessary. Additionally, some checklist questions were overly complex and had to be simplified to make them more actionable. The reason for the changes stems from the team gaining a better understanding of the project's priorities and limitations as we progressed. In future projects, we could anticipate such changes by setting more realistic goals during the planning phase.
 
 \end{enumerate}
 
