--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -1209,7 +1209,7 @@ graduate attribute of Reflection.
 \begin{enumerate}
     \item What went well while writing this deliverable? 
     
-
+        The team effectively managed the workload despite the absence of one team member. The final VnV report deliverable was relatively straightforward to assemble due to the significant amount of preparatory work completed earlier in the semester. Finally, the meeting with Lucas provided valuable guidance, enabling us to break down tasks efficiently and get a head start on the final report. 
   
     \item What pain points did you experience during this deliverable, and how
       did you resolve them?
