--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -1219,7 +1219,7 @@ graduate attribute of Reflection.
     \item Which parts of this document stemmed from speaking to your client(s) or
     a proxy (e.g. your peers)? Which ones were not, and why?
   
-     
+        Most of the frontend improvements were directly informed by survey feedback from peers, which was incorporated to enhance usability. However, some parts of the document, such as the initial test case design, were developed independently by us prior to the survey being sent out. Some of the survey feedback, such as the logic for image partitioning, directly affected the current backend implementation.
   
     \item In what ways was the Verification and Validation (VnV) Plan different
     from the activities that were actually conducted for VnV?  If there were
