--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -1230,7 +1230,7 @@ graduate attribute of Reflection.
     evidence that demonstrates the required quality?  (It is expected that most
     teams will have had to deviate from their original VnV Plan.)
   
-    
+    The actual VnV activities deviated from the original plan in several ways. During the planning phase, we had considered a wide range of requirements, many of which were later removed due to scope constraints and difficulty levels. The team initially aimed for an ambitious testing scope, including tests for unimplemented or less critical requirements, which proved unnecessary. Additionally, some checklist questions were overly complex and had to be simplified to make them more actionable. The reason for the changes stems from the team gaining a better understanding of the project's priorities and limitations as we progressed. In future projects, we could anticipate such changes by setting more realistic goals during the planning phase.
   
   \end{enumerate}
 
