--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -1154,7 +1154,7 @@ During our testing process, we encountered several test failures, mainly in our 
     \end{itemize}
 \end{itemize}
 
-\subsubsection{Mocking \\& Unit Test Issues}
+\subsubsection{Mocking and Unit Test Issues}
 \begin{itemize}
     \item The unit tests that rely on database queries may not have correctly mocked the DB connection.
     \item In some cases, mocked methods did not return expected results, causing tests to fail when fetching data.
