--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -4737,6 +4737,12 @@ None
 \subsubsection{6.4.5 Local Functions}
 None
 
+\section{Exception Handling} \label{sec:ExceptionHandling}
+
+The application implements a structured approach to exception handling across both frontend and backend components.
+
+
+
 \bibliographystyle {plainnat}
 \bibliography {../../../refs/References}
 
