--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -4741,6 +4741,9 @@ None
 
 The application implements a structured approach to exception handling across both frontend and backend components.
 
+\subsection{Frontend Handling (React)}
+
+\subsection{Backend Handling (Python)}
 
 
 \bibliographystyle {plainnat}
