--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -4743,7 +4743,11 @@ The application implements a structured approach to exception handling across bo
 
 \subsection{Frontend Handling (React)}
 
+
+
 \subsection{Backend Handling (Python)}
+
+On the Python backend, exceptions are handled at multiple levels—locally in functions with try-catch blocks, or via packages (e.g., Flask/Waiter error handlers). Critical exceptions (e.g., database failures) are logged with severity levels (DEBUG, INFO, WARNING, ERROR, CRITICAL) using structured logging. Some exceptions are propagated to the frontend as HTTP error responses with sanitized messages to avoid exposing sensitive details.
 
 
 \bibliographystyle {plainnat}
