--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -4743,7 +4743,7 @@ The application implements a structured approach to exception handling across bo
 
 \subsection{Frontend Handling (React)}
 
-
+In the React frontend, exceptions are typically caught using try-catch blocks or via global error boundaries for unhandled UI errors. Frontend errors (e.g., API failures, rendering issues) are logged to the browser console. User-friendly fallback UIs are displayed where applicable.
 
 \subsection{Backend Handling (Python)}
 
