--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -1255,6 +1255,15 @@ The following hierarchy is represented as a directed acyclic graph, with arrows 
     \label{FigUH}
   \end{figure}
 
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{project_stats.png}
+    \caption{Project selection}
+    \label{FigUH}
+  \end{figure}
+  
+  
+
 %\section*{References}
 
 \section{User Interfaces}
