--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -1262,6 +1262,13 @@ The following hierarchy is represented as a directed acyclic graph, with arrows 
     \label{FigUH}
   \end{figure}
   
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{labelling_model.png}
+    \caption{Labelling model}
+    \label{FigUH}
+  \end{figure}
+
   
 
 %\section*{References}
