--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -1269,7 +1269,12 @@ The following hierarchy is represented as a directed acyclic graph, with arrows 
     \label{FigUH}
   \end{figure}
 
-  
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{ui_interfaces.png}
+    \caption{UI interfaces}
+    \label{FigUH}
+  \end{figure}
 
 %\section*{References}
 
